
<ScrollView
	android:id="@+id/scrollView1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="10dip"
		android:orientation="vertical">
		<TextView
			android:text="@string/message_help_title1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_title_summary1"
			android:gravity="center"
			android:padding="10dip"
			android:background="@color/color_basic3"
			android:textColorHighlight="@color/color_basic1"
			android:textColor="@color/color_black"
			android:textSize="15dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_text1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_title_summary2"
			android:gravity="center"
			android:padding="10dip"
			android:background="@color/color_basic3"
			android:textColorHighlight="@color/color_basic1"
			android:textColor="@color/color_black"
			android:textSize="15dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_text2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_title_summary3"
			android:gravity="center"
			android:padding="10dip"
			android:background="@color/color_basic3"
			android:textColorHighlight="@color/color_basic1"
			android:textColor="@color/color_black"
			android:textSize="15dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_text3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_title_summary4"
			android:gravity="center"
			android:padding="10dip"
			android:background="@color/color_basic3"
			android:textColorHighlight="@color/color_basic1"
			android:textColor="@color/color_black"
			android:textSize="15dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_text4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_help_title2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
	</LinearLayout>
</ScrollView>
