
<ScrollView
	android:id="@+id/scrollView1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="10dip"
		android:orientation="vertical">
		<TextView
			android:text="@string/message_first_lanch_title1"
			android:gravity="center"
			android:padding="10dip"
			android:background="@color/color_basic3"
			android:textColorHighlight="@color/color_basic1"
			android:textColor="@color/color_black"
			android:textSize="15dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_first_lanch1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_first_lanch_title2"
			android:gravity="center"
			android:padding="10dip"
			android:background="@color/color_basic3"
			android:textColorHighlight="@color/color_basic1"
			android:textColor="@color/color_black"
			android:textSize="15dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_first_lanch2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_first_lanch_title3"
			android:gravity="center"
			android:padding="10dip"
			android:background="@color/color_basic3"
			android:textColorHighlight="@color/color_basic1"
			android:textColor="@color/color_black"
			android:textSize="15dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:includeFontPadding="true"></TextView>
		<TextView
			android:text="@string/message_first_lanch3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:textSize="15dip"
			android:includeFontPadding="true"></TextView>
		<Button
			android:text="@string/button_first_lanch_next"
			android:id="@+id/Button_FirstLanch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:onClick="showNext"></Button>
	</LinearLayout>
</ScrollView>
